testdata/bad/dateWithZ.ion
// Date-grained timestamp cannot have timezone designator.
1969-02-23Z
